# Quantum-Amplitude-Estimation-for-Option-Pricing

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  run_demo.py
finalpaper/: qc_paper.bib
paper/: latexmkrc  main-blx.bib  main.tex  outline.txt  qc_paper.bib  qc_paper_bibertool.bib  references.bib
results/: asian_table.txt  european_table.txt  geo_crosscheck.txt  kv_sensitivity_table.txt  literature_validation_report.txt  quantum_asian_3date_table.txt  quantum_asian_toy_table.txt  quantum_european_statevector_table.txt  quantum_resource_table.txt  variance_reduction_summary.txt
results/fast/: asian_table.txt  european_table.txt  geo_crosscheck.txt  kv_sensitivity_table.txt  variance_reduction_summary.txt
scripts/: generate_classical_results.py  generate_gbm_paths_figure.py  generate_kv_sensitivity.py  generate_quantum_asian_toy.py  generate_quantum_results.py  generate_quantum_schematic.py  reproduce_stamatopoulos_fig3.py  run_classical_demo.py  validate_literature_benchmarks.py  validate_quantum_european.py
src/qc_option_pricing/: __init__.py  demo.py
src/qc_option_pricing/classical/: __init__.py  asian_mc.py  black_scholes.py  gbm.py  monte_carlo.py
src/qc_option_pricing/quantum/: __init__.py  european_ae.py  toy_amplitude_estimation.py
src/qc_option_pricing/visualization/: __init__.py  sta20_a_operator.py
