[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qc-option-pricing"
version = "0.1.0"
description = "Classical Monte Carlo and quantum option-pricing building blocks"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
quantum = [
    "pylatexenc",
    "qiskit",
    "qiskit-algorithms",
    "qiskit-finance",
]

[project.scripts]
qc-option-pricing-demo = "qc_option_pricing.demo:main"

[tool.setuptools.packages.find]
where = ["src"]
